[package]
name = "mydama"
version = "0.0.1"
edition = "2021"
license = "Apache-2.0 OR ISC OR MIT"
description = "MY DAta MAnager."
publish = false

[dependencies]
actix = "0"
actix-rt = "2" 
bytes = "1"
clap = { version ="4", features = ["derive"] }
env_logger = "0.9.0" # 0.10 requires an MSRV bump to 1.60
log = { version = "0.4.4" }
mio = { version = "0.8", features = ["net", "os-poll"] }
prost = "0.11"
prost-types = "0.11"
rustls-pemfile = "1.0.0"
rustls = { version = "0.21", features = [ "logging" ]}
sct = "0.7"
webpki-roots = "0.23"

[build-dependencies]
prost-build = { version = "0.11" }
